@@ -7,6 +7,7 @@ version 0.9.0-rc0 - XX-Jan-2010
  . Director: removed compile warning on DisplayLink director (issue #682)
  . Scheduler: Supports repeat-number-of-times in scheduled selectors (issue #630)
  . Sprite: anchor + offset + scale works  (issue #671)
+ . Sprite: can create subclasses with an SpriteFrameName (issue #XXX)
  . SpriteFrame: removed support for flipX and flipY  (rollback of a part issue #620)
  . SpriteFrameCache: If originalSize is not present, display warning (issue #670)
  . SpriteSheet: adding grand-children doesn't crash (issue #676)
@@ -15,6 +16,7 @@ version 0.9.0-rc0 - XX-Jan-2010
  . Templates: uses rfc1034identifier (issue #685)
  . TMXTiledMap: added support for object and objectgroup (issue #636)
  . TMXTiledMap: TMXLayer and TMXObjectGroup on it's own files (part of issue #636)
+ . TMXTiledMap: doesn't generate descendants when not necessary (works as fast as in v0.8.2)
  
 version 0.9.0-beta - 14-Dic-2009
  . ActionManager: fixed leak (issue #635)
